--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -5,7 +5,7 @@
     app:startDestination="@id/welcome_fragment">
     <fragment
         android:id="@+id/welcome_fragment"
-        android:name="com.test.currencies.ui.currencieslist.CurrenciesListFragment"
+        android:name="com.currencies.ui.currencieslist.CurrenciesListFragment"
         android:label="WelcomeFragment"
         tools:layout="@layout/currencies_list_fragment" />
 </navigation>
