- add currency details fragment

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,5 +7,20 @@
         android:id="@+id/welcome_fragment"
         android:name="com.currencies.ui.currencieslist.CurrenciesListFragment"
         android:label="WelcomeFragment"
-        tools:layout="@layout/currencies_list_fragment" />
+        tools:layout="@layout/currencies_list_fragment">
+        <action
+            android:id="@+id/action_welcome_fragment_to_currencyDetailsFragment"
+            app:destination="@id/currencyDetailsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/currencyDetailsFragment"
+        android:name="com.currencies.ui.currencydetails.CurrencyDetailsFragment"
+        android:label="CurrencyDetailsFragment">
+        <argument
+            android:name="currencyName"
+            app:argType="string" />
+        <argument
+            android:name="currencyRate"
+            app:argType="float" />
+    </fragment>
 </navigation>
